tests/snapshots/sizes__landing_120x40.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────┐
│> (empty — press e to focus)                                                                                          │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
┌ start ───────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ connected to shop on localhost:5432 · pg 16.2 · RO                                                                   │
│                                                                                                                      │
│   e   write a query                                                 S   schema browser (3 tables)                    │
│   Q   saved queries (3)                                             T   slow queries                                 │
│   W   schema wizard                                                 L   sessions & locks                             │
│   F8  logs → SQL (paste a Hibernate / Postgres log in the editor)   F4  JDBC tap                                     │
│   ?   all keys                                                                                                       │
│                                                                                                                      │
│ recent                                                                                                               │
│   SELECT * FROM users WHERE id = 42;                                                                                 │
│   SELECT count(*) FROM orders WHERE status = 'shipped';                                                              │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   q quit · ? help · e editor · S schema · W wizard · Q saved · T slow · L sessions · F1 +3 more
